# realsense_python

./: .gitmodules  CMakeLists.txt  README.md  demo_gui.py  rs_python.cpp
